--- a/src/components/style.css
+++ b/src/components/style.css
@@ -38,12 +38,13 @@ h1{
     position: relative;
 }
 .img-back{
+  overflow: hidden;
     height: 400px;
     width: 400px;
     border-radius: 50%;
     z-index: 0;
-    overflow: hidden;
     background: linear-gradient( #4D869C,#EEF7FF);
+    transition: 1s linear;
     box-shadow: 0px 0px 100px #4D869C;
     /* animation: name duration timing-function delay iteration-count direction fill-mode; */
     animation: shad 2s linear infinite alternate both;
@@ -53,16 +54,16 @@ h1{
   0%{
     transition: 2s;
     box-shadow: 0px 0px 0px #4D869C;
-    background: linear-gradient( #EEF7FF,#4D869C);
+    /* background: linear-gradient( #EEF7FF,#4D869C); */
   }
   50%{
     transition: 2s;
-    /* box-shadow: 0px 0px 100px #4D869C; */
-    background: linear-gradient(#4D869C, #EEF7FF,#4D869C);
+    box-shadow: 0px 0px 100px #4D869C;
+    /* background: linear-gradient(#4D869C, #EEF7FF,#4D869C); */
   }
   100%{
-    box-shadow: 0px 0px 100px #4D869C;
-    background: linear-gradient(#4D869C, #EEF7FF);
+    box-shadow: 0px 0px 100px #4D869C ;
+    /* background: linear-gradient(#4D869C, #EEF7FF); */
   }
 
 }
